--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             </div>
         </div>
 
-        <!-- Footer Start -->
+        <!-- Footer -->
         <div class="container-fluid bg-primary text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
                 <div class="row gy-5 gx-4 pt-5">
