--- a/price/priceShare.html
+++ b/price/priceShare.html
@@ -39,6 +39,108 @@
             </div>
         </div>
 
+                <!-- Navbar Short Section -->
+        <div class="container-xxl position-relative p-0"><!--!-->
+            <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
+                <a href="" class="navbar-brand p-0">
+                    <h1 class="m-0">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor"
+                            class="bi bi-rocket-takeoff-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M12.17 9.53c2.307-2.592 3.278-4.684 3.641-6.218.21-.887.214-1.58.16-2.065a3.6 3.6 0 0 0-.108-.563 2 2 0 0 0-.078-.23V.453c-.073-.164-.168-.234-.352-.295a2 2 0 0 0-.16-.045 4 4 0 0 0-.57-.093c-.49-.044-1.19-.03-2.08.188-1.536.374-3.618 1.343-6.161 3.604l-2.4.238h-.006a2.55 2.55 0 0 0-1.524.734L.15 7.17a.512.512 0 0 0 .433.868l1.896-.271c.28-.04.592.013.955.132.232.076.437.16.655.248l.203.083c.196.816.66 1.58 1.275 2.195.613.614 1.376 1.08 2.191 1.277l.082.202c.089.218.173.424.249.657.118.363.172.676.132.956l-.271 1.9a.512.512 0 0 0 .867.433l2.382-2.386c.41-.41.668-.949.732-1.526zm.11-3.699c-.797.8-1.93.961-2.528.362-.598-.6-.436-1.733.361-2.532.798-.799 1.93-.96 2.528-.361s.437 1.732-.36 2.531Z" />
+                            <path
+                                d="M5.205 10.787a7.6 7.6 0 0 0 1.804 1.352c-1.118 1.007-4.929 2.028-5.054 1.903-.126-.127.737-4.189 1.839-5.18.346.69.837 1.35 1.411 1.925" />
+                        </svg>
+                        GreenHost
+                    </h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="fa fa-bars"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="navbar-nav ms-auto py-0">
+                        <a href="index.html" class="nav-item nav-link ">Home</a>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
+                            <div class="dropdown-menu m-0">
+                                <a href="about.html" class="dropdown-item">About</a>
+                                <a href="team.html" class="dropdown-item">Our Team</a>
+                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a href="comparison.html" class="dropdown-item">Comparison</a>
+                                <a href="contact.html" class="dropdown-item">Contact</a>
+                            </div>
+                        </div>
+                        <a href="hostingShare.html" class="nav-item nav-link active">Shared</a>
+                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VPS</a>
+                        <a href="hostingShare.html" class="nav-item nav-link">Cloud VDS</a>
+                        <a href="hostingShare.html" class="nav-item nav-link">Dedicated Server</a>
+
+                    </div>
+                    <butaton type="button" class="btn text-secondary ms-3" data-bs-toggle="modal"
+                        data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
+                    <a href="" class="btn btn-secondary py-2 px-4 ms-3">Register</a>
+                </div>
+            </nav>
+
+            <!-- Search Active -->
+            <div class="modal fade" id="searchModal" tabindex="-1" b-rswtbb66nh="">
+                <div class="modal-dialog modal-fullscreen" b-rswtbb66nh="">
+                    <div class="modal-content" style="background: rgba(29, 40, 51, 0.8);" b-rswtbb66nh="">
+                        <div class="modal-header border-0" b-rswtbb66nh=""><button type="button"
+                                class="btn bg-white btn-close" data-bs-dismiss="modal" aria-label="Close"
+                                b-rswtbb66nh=""></button></div>
+                        <div class="modal-body d-flex align-items-center justify-content-center" b-rswtbb66nh="">
+                            <div class="input-group" style="max-width: 600px;" b-rswtbb66nh=""><input type="text"
+                                    class="form-control bg-transparent border-light p-3"
+                                    placeholder="Type search keyword" b-rswtbb66nh="">
+                                <button class="btn btn-light px-4" b-rswtbb66nh=""><i class="bi bi-search"
+                                        b-rswtbb66nh=""></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-xxl pt-5 bg-primary mb-5 ">
+                <div class="container-fluid">
+                    <div class="row g-5 pt-5">
+                        <div class="col-6 text-center text-lg-start">
+                            <h3 class="text-white mx-4">Hosting Shared</h3>
+                        </div>
+                        <div class="col-6 text-center text-lg-start">
+                            <nav aria-label="breadcrumb">
+                                <ol
+                                    class="breadcrumb justify-content-center justify-content-lg-end animated slideInRight mx-4">
+                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">Hosting</li>
+                                    <li class="breadcrumb-item text-white active" aria-current="page">Configure</li>
+                                </ol>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Full Screen Search Start -->
+        <div class="modal fade" id="searchModal" tabindex="-1">
+            <div class="modal-dialog modal-fullscreen">
+                <div class="modal-content" style="background: rgba(29, 40, 51, 0.8);">
+                    <div class="modal-header border-0">
+                        <button type="button" class="btn bg-white btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body d-flex align-items-center justify-content-center">
+                        <div class="input-group" style="max-width: 600px;">
+                            <input type="text" class="form-control bg-transparent border-light p-3"
+                                placeholder="Type search keyword">
+                            <button class="btn btn-light px-4"><i class="bi bi-search"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- ===== Main Content: VPS Configurator ===== -->
         <div class="container-xxl py-5">
             <div class="container px-lg-5">
@@ -501,6 +603,82 @@
         </div>
 
         <!-- Footer -->
+        <div class="container-fluid bg-primary text-white footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+            <div class="container py-5 px-lg-5">
+                <div class="row gy-5 gx-4 pt-5">
+                    <div class="col-12">
+                        <h5 class="fw-bold text-white mb-4">Subscribe Our Newsletter</h5>
+                        <div class="position-relative" style="max-width: 400px;">
+                            <input class="form-control bg-white border-0 w-100 py-3 ps-4 pe-5" type="text"
+                                placeholder="Enter your email">
+                            <button type="button"
+                                class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">Submit</button>
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-md-12">
+                        <div class="row gy-5 g-4">
+                            <div class="col-md-6">
+                                <h5 class="fw-bold text-white mb-4">About Us</h5>
+                                <a class="btn btn-link" href="./about.html">About Us</a>
+                                <a class="btn btn-link" href="./contact.html">Contact Us</a>
+                                <a class="btn btn-link" href="./privacy.html">Privacy Policy</a>
+                                <a class="btn btn-link" href="">Terms & Condition</a>
+                                <a class="btn btn-link" href="">Support</a>
+                            </div>
+                            <div class="col-md-6">
+                                <h5 class="fw-bold text-white mb-4">Our Services</h5>
+                                <a class="btn btn-link" href="https://domain.gov.kh/">Domain Register</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Shared Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">VPS Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Dedicated Hosting</a>
+                                <a class="btn btn-link" href="./hostingShare.html">Reseller Hosting</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>st168 Setec Institute</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+855 96 2909 858</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>setec@gmail.com</p>
+                        <div class="d-flex pt-2">
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 mt-lg-n5">
+                        <div class="bg-light rounded" style="padding: 30px;">
+                            <input type="text" class="form-control border-0 py-2 mb-2" placeholder="Name">
+                            <input type="email" class="form-control border-0 py-2 mb-2" placeholder="Email">
+                            <textarea class="form-control border-0 mb-2" rows="2" placeholder="Message"></textarea>
+                            <button class="btn btn-primary w-100 py-2">Send Message</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container px-lg-5">
+                <div class="copyright">
+                    <div class="row">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                            &copy; <a class="border-bottom" href="#">Sabay Host SV5</a>, All Right Reserved.
+
+                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                            Designed By <a class="border-bottom" href="https://htmlcodex.com">SV5 Students</a>
+                        </div>
+                        <div class="col-md-6 text-center text-md-end">
+                            <div class="footer-menu">
+                                <a href="">Home</a>
+                                <a href="">Cookies</a>
+                                <a href="">Help</a>
+                                <a href="">FQAs</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <script>
             /* Months Calculation Function */
             const monthPrice = 1.10;
